--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,13 +4,19 @@ FROM node:20-alpine AS base
 FROM base AS deps
 WORKDIR /app
 COPY package.json package-lock.json* ./
-RUN npm ci
+RUN if [ -f package-lock.json ]; then npm ci; else npm install; fi
 
 # Builder
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
 COPY . .
+
+# Build args for env vars needed at build time
+ARG NEXT_PUBLIC_API_URL
+ARG NEXT_PUBLIC_STRIPE_PRICE_HUNTER
+ARG NEXT_PUBLIC_STRIPE_PRICE_OPERATOR
+
 RUN npm run build
 
 # Runner
