fix: import models in main.py, update config defaults, fix docker-compose build args, update .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
 # ============================================
 # deadinternet.report - Environment Variables
 # ============================================
-# cp .env.example .env
+# cp .env.example .env && edit with your values
+
+# ---- General ----
+DEBUG=true
 
 # ---- PostgreSQL ----
 POSTGRES_USER=deadinet
@@ -9,34 +12,40 @@ POSTGRES_PASSWORD=change_me_in_production
 POSTGRES_DB=deadinternet
 
 # ---- Auth (NextAuth.js) ----
-NEXTAUTH_URL=http://localhost:3000
+# Generate with: openssl rand -base64 32
+NEXTAUTH_URL=https://deadinternet.report
 NEXTAUTH_SECRET=generate-with-openssl-rand-base64-32
 
-# Google OAuth
+# Google OAuth (https://console.cloud.google.com/apis/credentials)
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-# GitHub OAuth
+# GitHub OAuth (https://github.com/settings/developers)
 GITHUB_ID=
 GITHUB_SECRET=
 
-# ---- Stripe ----
+# ---- Stripe (https://dashboard.stripe.com/test/apikeys) ----
 STRIPE_PUBLIC_KEY=pk_test_...
 STRIPE_SECRET_KEY=sk_test_...
 STRIPE_WEBHOOK_SECRET=whsec_...
+
+# Create products & prices in Stripe Dashboard
+NEXT_PUBLIC_STRIPE_PRICE_HUNTER=price_...
+NEXT_PUBLIC_STRIPE_PRICE_OPERATOR=price_...
 STRIPE_PRICE_HUNTER=price_...
 STRIPE_PRICE_OPERATOR=price_...
 
-# ---- Anthropic ----
+# ---- Anthropic (https://console.anthropic.com/settings/keys) ----
 ANTHROPIC_API_KEY=sk-ant-...
 
-# ---- Redis ----
+# ---- Infrastructure ----
 REDIS_URL=redis://redis:6379/0
+API_URL=http://backend:8000
+NEXT_PUBLIC_API_URL=http://localhost:8000
 
 # ---- Ports ----
 HTTP_PORT=80
 HTTPS_PORT=443
-API_URL=http://localhost:8000
 
 # ---- Rate Limits (scans/day) ----
 SCAN_RATE_FREE=0
