chore: add JWT_SECRET and INTERNAL_API_SECRET to .env.example

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # cp .env.example .env && edit with your values
 
 # ---- General ----
-DEBUG=true
+DEBUG=false
 
 # ---- PostgreSQL ----
 POSTGRES_USER=deadinet
@@ -15,6 +15,14 @@ POSTGRES_DB=deadinternet
 # Generate with: openssl rand -base64 32
 NEXTAUTH_URL=https://deadinternet.report
 NEXTAUTH_SECRET=generate-with-openssl-rand-base64-32
+
+# REQUIRED: JWT secret for backend token verification (must match NEXTAUTH_SECRET)
+# Generate with: openssl rand -hex 32
+JWT_SECRET=generate-with-openssl-rand-hex-32
+
+# REQUIRED: Internal secret for server-to-server calls (NextAuth -> FastAPI)
+# Generate with: openssl rand -hex 32
+INTERNAL_API_SECRET=generate-with-openssl-rand-hex-32
 
 # Google OAuth (https://console.cloud.google.com/apis/credentials)
 GOOGLE_CLIENT_ID=
